--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
     background-color: #CFEDCE;
     font-family: 'Raleway', sans-serif;
     margin: 0;
+    position: relative;
 }
 
 nav {
@@ -41,3 +42,61 @@ div.rectangle {
     margin-top: 20px;
     width: 200px;
 }
+
+
+/* Home Page (index.html) */
+
+/* Home Page Main Three Images */
+
+
+
+/* .card {
+    border-radius: 20px;
+} */
+
+
+
+
+.home-card {
+    border-color: white;
+    border-radius: 25px;
+    display: inline-block;
+    height: 500px;
+    margin-left: 30px;
+    width: 250px;
+    position: relative;
+}
+
+.home-perfume-img {
+    
+    position: absolute;
+    width: 250px;
+}
+
+
+
+
+/* div.rectangle-home {
+    border: 1px solid white;
+    background: white;
+    border-radius: 10px;
+    display: inline-block;
+    height: 500px;
+    margin-top: 20px;
+    width: 280px;
+} 
+
+div.rectangle-home-1 {
+    position: absolute;
+    left: 80px;
+}
+
+div.rectangle-home-2 {
+    position: absolute;
+    left: 425px;
+}
+
+div.rectangle-home-3 {
+    position: absolute;
+    left: 770px; 
+} */
