--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,6 @@ body {
     color: black;
     background-color: #CFEDCE;
     font-family: 'Raleway', sans-serif;
-    margin: 0;
 }
 
 nav {
@@ -32,12 +31,76 @@ nav {
 }
 
 /* About Us Summary Rectangles */
-div.rectangle {
+div.rectangle1 {
     border: 1px solid white;
-    background: white;
     border-radius: 10px;
+    background: white;
     display: inline-block;
     height: 400px;
     margin-top: 20px;
     width: 200px;
+    margin-left: 75px;
+    text-align: auto;
 }
+
+div.rectangle2 {
+    border: 1px solid white;
+    border-radius: 10px;
+    background: white;
+    display: inline-block;
+    height: 400px;
+    margin-top: 20px;
+    width: 200px;
+    margin-left: 150px;
+    text-align: auto;
+}
+
+div.rectangle3 {
+    border: 1px solid white;
+    border-radius: 10px;
+    background: white;
+    display: inline-block;
+    height: 400px;
+    margin-top: 20px;
+    width: 200px;
+    margin-left: 150px;
+    text-align: auto;
+}
+
+div.rectangle4 {
+    border: 1px solid white;
+    border-radius: 10px;
+    background: white;
+    display: inline-block;
+    height: 400px;
+    margin-top: 20px;
+    width: 200px;
+    margin-left: 150px;
+    text-align: auto;
+    position: relative;
+}
+
+div.rectangle5 {
+    border: 1px solid white;
+    border-radius: 10px;
+    background: white;
+    display: inline-block;
+    height: 400px;
+    margin-top: 120px;
+    width: 200px;
+    margin-left: 150px;
+    text-align: auto;
+    position: relative;
+}
+
+P{
+    font-family: Helvetica, sans-serif;
+}
+
+img {
+    border-radius: 50%;
+    display: inline-block;
+    position: relative;
+    top: 100px;
+    left: 25px;
+  }
